--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 
-<!-- <app-header></app-header>  -->
+<app-header></app-header> 
  <!-- <app-package-listing></app-package-listing>  -->
 <router-outlet></router-outlet>
