--- a/src/app/core/component/rating/rating.component.html
+++ b/src/app/core/component/rating/rating.component.html
@@ -1,14 +1,19 @@
+<ul class="rating">
 
-<!-- <ul class="rating">
-     <li [ngClass]="{'filled':star.filled}" class="star" *ngFor="let star of stars; index as i" (click)="changeRating(i)"> 
-        <i  class=" filled mdi mdi-star"></i>
-        <i  class=" notfilled mdi mdi-star-outline"></i>
+    <li [ngClass]="{'filled' : star.filled, 'pointer' : !disabled}" class="star" *ngFor="let star of stars; index as i"
+    (click)="changeRating(i)">
+        <i *ngIf="star.filled" class="mdi mdi-star"></i>
+        <i *ngIf="!star.filled" class="mdi mdi-star-outline"></i>
     </li>
-</ul> -->
+<!--      
+    <li class="filled" *ngFor="let star of filledStars; index as i">
+        <i class="mdi mdi-star"></i>
+    </li>
+    <li *ngFor="let star of emptyStars; index as i">
+        <i class="mdi mdi-star-outline"></i>
+    </li>
+    <li class="star" *ngFor="let star of stars; index as i">
+        <i class="mdi mdi-star"></i>
+    </li> -->
 
-<ul>
-    <li class="filled">
-        <i  class=" mdi mdi-star"></i>
-        <i  class=" mdi mdi-star-outline"></i>
-    </li>
 </ul>
