--- a/src/app/catalog/components/package-list-item/package-list-item.component.html
+++ b/src/app/catalog/components/package-list-item/package-list-item.component.html
@@ -1,28 +1,28 @@
-
-
-
-<!-- <p>package-list-item works!</p> -->
-<div class="package-container pointer" (click)="onPackageSelected()">
-    <section class="row package-card">
-        <div class="image-container">
+<div class="package-container pointer"  (click)="onPackageSelected()" >
+    <section class="package card">
+        <div class="image-container" >
+            <!-- <img  src="{{package.location | imageUrl}}"> -->
             <img src="assets/asset/img/location/{{package.location}}.png">
         </div>
+
         <div class="row summary">
+
             <div class="left text-content">
-                <h2>{{package.name}}</h2> -->
-                 <!-- <p class="amount">{{package.price|currency:'INR':'symbol-narrow':'4.2-2'}}</p> 
-                 -->
-            
-            <!-- <div>
-                <app-rating [disabled]="true" [rating]="rating"></app-rating>
-                <span>(2)</span>
-            </div> -->
-     </div>
-        <div class="right">
-            <i class="mdi mdi-cart-plus"></i>
+                <h2 class="package-name">{{package.name}}</h2>
+                <p class="amount">{{package.price | currency:'INR':'symbol-narrow':'4.2-2'}}</p>
+
+                <div class="rating">
+                    <app-rating [disabled]="true" [rating] = "rating"></app-rating>
+                    <span>(2)</span>
+                </div>
+
+            </div>
+            <div class="right package-listing-cart-icon">
+                <i (click)="addItemToCart($event)" class=" pointer mdi mdi-cart-plus"></i>
+            </div>
+
         </div>
-        </div>
-        
+
     </section>
 </div>
-
+    
