--- a/src/app/catalog/components/package-listing/package-listing.component.html
+++ b/src/app/catalog/components/package-listing/package-listing.component.html
@@ -1,41 +1,20 @@
-
-
-<div>
- <!-- <div class='row'>
-    {{summaries | json}}
-    {{totalCount}}
-</div>  -->
+<div class="container">
     <div class="row">
-        <ul class="summary" >
-            <li [ngClass]="{'highlight':summary.isHighlighted}"*ngFor="let summary of summaries" (click)= "toggleSelection(summary)" >
+        <ul class="summary">
+            <li [ngClass]="{'highlight': summary.isHighlighted}" *ngFor="let summary of summaries" (click)="toggleSelection(summary)">
                 <span class="left">{{summary.location}}</span>
                 <span class="right">{{summary.count}}</span>
             </li>
             <li>
-                {{highlightedCount}}/{{totalCount}}
+                Total {{highlightedCount}} / {{totalCount}}
             </li>
         </ul>
     </div>
-
-
-    <div>
-        <ul>
-            <li *ngFor="let package of packages"> 
-                 <app-package-list-item [package]="package"></app-package-list-item> 
-                <!-- <app-package-list-item></app-package-list-item> -->
-             </li>
+    <div class="row">
+        <ul class="packages">
+            <li *ngFor="let package of packages">
+                <app-package-list-item [package]="package"></app-package-list-item>
+            </li>
         </ul>
     </div>
-
-
-    <!-- <div class="packages" (click)="onPackageSelected()">
-        <div *ngFor="let package of packages">
-            {{package.id}}
-            {{package.price}}
-            <img src="assets/asset/img/location/{{package.location}}.png">
-            <i class="mdi mdi-cart-plus"></i>
-        </div>
-    </div> -->
 </div>
-
-
