--- a/src/app/catalog/components/package-listing/package-listing.component.scss
+++ b/src/app/catalog/components/package-listing/package-listing.component.scss
@@ -1,11 +1,9 @@
-
-.row{
-    margin-top: 80px;
+.container{
+    margin-top: 100px;
+}
+ul.summary{
     padding-left: 20px;
     padding-top: 20px;
-}
-
-ul.summary{
     li{
         float:left;
         margin-right: 20px;
@@ -27,7 +25,7 @@ ul.summary{
         background-color: green;
     }
 }
- .packages{
+ ul.packages{
     float:left;
     width:100%;
     li{
@@ -38,3 +36,7 @@ ul.summary{
 ul{
     list-style: none;
 }
+
+
+
+
