--- a/src/app/core/component/header/header.component.html
+++ b/src/app/core/component/header/header.component.html
@@ -1,8 +1,7 @@
-<header class="header">
-<div>
-    <h1>TCAT TOUR PACKAGES</h1>
-</div>
-<div>
-    <app-cart-widget></app-cart-widget>
-</div>
+<header>
+    <div>
+        <app-cart-widget></app-cart-widget>
+      <h1>{{title}}</h1>
+    </div>
 </header>
+ 
