--- a/src/app/core/component/header/header.component.scss
+++ b/src/app/core/component/header/header.component.scss
@@ -1,18 +1,17 @@
-.package-title{
-    font-weight: 500;
-    font-size: 20px;
-    text-align: left;
-    color: #707070;
-}
-
-.header{
-    position: fixed;
-    width:100vw;
-    height: 72px;
-    background-color: white;
-}
-
 h1{
-    line-height: 20px;
-    
+    text-transform: uppercase;
+    line-height: 24px;
+    margin-top: 0px;
+    padding-left: 20px;
+    height: 72px;
+    line-height: 72px;
+}
+header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 72px;
+    background-color: #fff;
+    box-shadow: 0px 5px 20px rgba(147, 170, 185, 0.16);
 }
