--- a/src/app/catalog/components/package-summary-header/package-summary-header.component.html
+++ b/src/app/catalog/components/package-summary-header/package-summary-header.component.html
@@ -7,10 +7,10 @@
         <h2>{{package?.name}}</h2>
         <p class="amount">{{package?.price | currency:'INR':'symbol-narrow':'4.2-2'}}</p>
         <p>{{package?.details}}</p>
-        <!-- <div>
+        <div class="rating">
             <app-rating [disabled]="true" [rating]="rating"></app-rating>
             <span>(2)</span>
-        </div> -->
+        </div>
         <div class="left button-pane">
             <button class="btn-addtocart" (click)="addToCart()"><i class="mdi mdi-cart"></i>Add to Cart</button>
             <button (click)="addReview()"><i class="mdi mdi-comment-edit"></i>Add Review</button>
