--- a/src/app/catalog/components/package-summary-header/package-summary-header.component.scss
+++ b/src/app/catalog/components/package-summary-header/package-summary-header.component.scss
@@ -14,28 +14,15 @@
             max-width: 100%;
         }
     }
-    .desc{
-        float: left;
-        width: calc(100% - 400px);
-        h2{
-            float: left;
-            width: 100%;
-            font-family: Roboto;
-            font-weight: 500;
-            font-size: 20px;
-            text-align: left;
-            color: #707070;
-            margin: 0;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-        }
+    
         .button-pane{
             float: left;
             width: 100%;
             padding-top: 40px;
             //padding:20px;
-            padding-right: 20px;
+            padding-right: 40px;
+            margin-left:375px;
+            margin-top: -100px;;
             button{
                 min-width: 150px;
                 margin-right: 20px;
@@ -44,7 +31,7 @@
                     margin-right: 20px;
                 }
             }
-        }
+        
     
     }
 }
@@ -57,3 +44,7 @@
     padding-right: 20px;
 }
     
+.rating{
+    margin-top: -20px;
+    margin-left:-20px;
+}
