--- a/src/app/catalog/components/review-item/review-item.component.html
+++ b/src/app/catalog/components/review-item/review-item.component.html
@@ -1,13 +1,13 @@
-<section class="card mtm pam">
+<section class="row card mtm pam">
     <div class="profile-image-container">
         <i class="mdi mdi-account"></i>
     </div>
     <div class=" left review-detail">
-        <div class="row">
+        <div class="row name">
             <span class="left reviewer mrm">{{review.reviewer}}</span>
             <app-rating [disabled]="true" [rating]="review.rating"></app-rating>
         </div>
-        <div class="row">
+        <div class="row review">
             <p>{{review.review}}</p>
         </div>
     </div>
